--- a/OverworldChests/manifest.json
+++ b/OverworldChests/manifest.json
@@ -1,11 +1,11 @@
 ﻿{
   "Name": "Overworld Chests",
   "Author": "aedenthorn",
-  "Version": "0.5.3",
+  "Version": "0.5.4",
   "Description": "Adds random chests to the Stardew Valley World.",
   "UniqueID": "aedenthorn.OverworldChests",
   "EntryDll": "OverworldChests.dll",
-  "MinimumApiVersion": "3.8.0",
+  "MinimumApiVersion": "4.0.0",
   "UpdateKeys": ["Nexus:7710"],
   "ModUpdater": {
     "Repository": "StardewValleyMods",
@@ -20,7 +20,7 @@
       },
       {
         "UniqueID": "aedenthorn.AdvancedLootFramework",
-        "IsRequired": true,
+        "IsRequired": false,
         "MinimumVersion": "0.4.0"
       },
   ]
